# tree-sitter-angelscript

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter-angelscript.wasm  tree-sitter.json
bindings/c/: tree-sitter-angelscript.h  tree-sitter-angelscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_angelscript/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterAngelScriptTests/: TreeSitterAngelScriptTests.swift
corpus/: classes.txt  statements.txt
src/: grammar.json  node-types.json  parser.c
